[package]
name = "feishu-core"
version = "0.1.0"
edition = "2021"
authors = ["Feishu Export Team"]
description = "Feishu (Lark) API client, models, storage and export engine"
license = "MIT"
repository = "https://github.com/xxx/feishu-export"
rust-version = "1.70"
readme = "README.md"

[dependencies]
# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
bytes = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
url = "2"
walkdir = "2"
sanitize-filename = "0.5"

# zip 打包
zip = { version = "2", default-features = false, features = ["deflate"] }

# 内部 crate
doc-converter = { path = "../doc-converter" }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
